--- a/content/posts/2022年度总结.md
+++ b/content/posts/2022年度总结.md
@@ -64,7 +64,7 @@ Obsidian，功能强大，本地，还可以GitHub同步，插件多，高度定
 
 
 ### 2
-在北京实习的时候和欧阳振光出去吃的一家德缘粉，还有一家肥肠火锅鸡都是北京非常好吃的店，强烈推荐
+在北京实习的时候和振光出去吃的一家德缘粉，还有一家肥肠火锅鸡都是北京非常好吃的店，强烈推荐
 
 ### 3
 九月换了新设备，iPhone13还有MacBook pro m2，生产力upup^ _ ^
@@ -74,7 +74,6 @@ Obsidian，功能强大，本地，还可以GitHub同步，插件多，高度定
 ### 愿望
 
 希望可以找到一个远程实习，不然感觉下个学期会很无聊。
-希望可以找到一个相伴终生妹子（随缘），可以一起在苏州游玩
 
 坚持刷题！！！
 leetcode 上2400分
