--- a/content/posts/算法模版.md
+++ b/content/posts/算法模版.md
@@ -1,7 +1,7 @@
 ---
 title: "算法模版"
 date: 2023-03-04T12:58:25+08:00
-draft: true
+draft: false
 ---
 
 from https://leopoldacc.github.io/Blogs/2021/04/21/%E6%A8%A1%E6%9D%BF%E6%80%BB%E7%BB%93/
