modify trie tree.

--- a/content/posts/算法模版.md
+++ b/content/posts/算法模版.md
@@ -191,25 +191,43 @@ int main(){
 
 ## Trie树
 ```c++
-int trie[N][26], tot = 1, cnt[N], n, m;
-void insert(string s) {
-    int len = s.length(), p = 1;
-    for (int k = 0; k < len; k++) {
-        int ch = s[k] - 'a';
-        if (!trie[p][ch]) trie[p][ch] = ++tot;
-        p = trie[p][ch];
+class Trie {
+public:
+    vector<Trie*> children;
+    bool isEnd;
+
+    Trie()
+        : children(26)
+        , isEnd(false) {}
+
+    void insert(string& w) {
+        Trie* node = this;
+        reverse(w.begin(), w.end());
+        for (char& c : w) {
+            int idx = c - 'a';
+            if (!node->children[idx]) {
+                node->children[idx] = new Trie();
+            }
+            node = node->children[idx];
+        }
+        node->isEnd = true;
     }
-    cnt[p]++;
-}
-int find(string t) {
-    int len = t.length(), p = 1;
-    for (int k = 0; k < len; k++) {
-        p = trie[p][t[k] - 'a'];
-        if (p == 0) return ans;
-        ans += cnt[p];
+
+    bool search(string& w) {
+        Trie* node = this;
+        for (int i = w.size() - 1, j = 0; ~i && j < 201; --i, ++j) {
+            int idx = w[i] - 'a';
+            if (!node->children[idx]) {
+                return false;
+            }
+            node = node->children[idx];
+            if (node->isEnd) {
+                return true;
+            }
+        }
+        return false;
     }
-    return ans;
-}
+};
 ```
 
 ## 并查集
