--- a/content/posts/2022年度总结.md
+++ b/content/posts/2022年度总结.md
@@ -40,14 +40,6 @@ Obsidian，功能强大，本地，还可以GitHub同步，插件多，高度定
 ### 研究生
 从去年九月份保研失败，开始准备考研，目标是东南大学软件学院电子信息硕士，然后到今年4月份复试结束，尘埃落定，考上了研究生，再续三年学生生活。
 
-### 实习
-今年4-7月在北京诺司时空实习，主要是做时序数据库的方向。干的活也不多，中途还封控了一个月，在出租屋摆烂了一个月，薪资的话每天300块+每月1500的房补。
-前两个月基本都在干一些测试的活，还有写一些文档
-后面一个月跟着延允大哥做了一些最终一致性的相关工作，这部分的收获还是很大的。然后实习期间也修复了几个小bug，添加了一些命令行的工具命令。
-总体来说，还可以吧。
-
-不过我们go项目组，后面直接没了...无语，前面的工作基本白费了，后面转rust语言，我自觉时间不够，而且当时还有几个好朋友叫我从北京回去，准备出去旅行，我就刚好辞退了，但是最后一个月的房租没住上，差不多亏了2000块，唉。
-
 ### 旅行
 
 从北京回来就准备去福建厦门那边旅行了，我当时的眼睛发炎了，非常难受，眼睛里面老是有眼屎糊着，而且眼睛非常疼，痒。
@@ -64,7 +56,7 @@ Obsidian，功能强大，本地，还可以GitHub同步，插件多，高度定
 
 
 ### 2
-在北京实习的时候和振光出去吃的一家德缘粉，还有一家肥肠火锅鸡都是北京非常好吃的店，强烈推荐
+在北京的时候和振光出去吃的一家德缘粉，还有一家肥肠火锅鸡都是北京非常好吃的店，强烈推荐
 
 ### 3
 九月换了新设备，iPhone13还有MacBook pro m2，生产力upup^ _ ^
